--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 </head>
 <body>
 
+
+    <canvas id="celebrate"></canvas>
     <div class="container">
         <div class="row">
             <div class="col-12 mt-3">
@@ -54,4 +56,7 @@
 </body>
 </html>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+</script>
+<script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
 <script src="script.js"></script>
+
